static/css/login.css
* {
    margin: 0;
}

html, body {
    width: 100%;
    height: 100%;
    padding: 0px;
    background-color: #c6d3da !important;
}

.header {
    height: 70px;
}

.container {
    min-height: 60%;
}

.message {
    margin-top: 10px;
    text-align: center;
}

.link {
    font-size: 25px;
    margin: 0 10px 0 10px;
}

ul li a {
    color: rgba(255, 255, 255, .5) !important;
}

p {
    color: rgba(255, 255, 255, .5) !important;
    margin-bottom: 1px !important;
}

ul li a:hover {
    text-decoration: none;
    color: darkgreen !important;
}

.dropdown-menu {
    background-color: #343a40 !important;
}

.dropdown-item {
    background-color: #343a40 !important;
}

.slider {
    width: 100%;
    height: 400px;
}
.content {
    width: 100%;
    height: 300px;

}
.heading {
    margin: 20px;
    color: black !important;
    font-family: WorkSans-ExtraBold, Arial;
    font-size: 50px;
}
.title {
    margin-top: 10px;
    color: black !important;
    font-family: WorkSans-Bold, Arial;
    font-size: 20px;
}

para {
    margin: 15px !important;
    font-weight: bold !important;
}
.courses{
    margin-bottom: 50px;
}

.login-box {
    border: 1px dashed #9C9C9C;
    border-radius: 10px;
    margin: 50px 0 50px 0;
    padding: 10px;
    height: 290px;
}

.reg-box {
    border: 1px dashed #9C9C9C;
    border-radius: 10px;
    margin: 40px 0 40px 0;
    padding: 10px;
    height: 480px;
}

.remember-me {
    display: inline-block;
    margin-left: 25px;
    margin-top: 10px;
}

.submit-btn {
    float: right;
    margin-top: 5px;
    margin-bottom: 5px;
}

.form-group {
    margin-bottom: 0rem !important;
}

.footer {
    min-height: 30%;
}

.quote {
    border-bottom: 1px solid black;
    font-family: WorkSans-Medium, Arial;
    font-size: 20px;
    padding-bottom: 50px;
    color: black !important;
}

.center {
    text-align: center;
}

.desc {
    color: black !important;
}

.course {
    cursor: pointer;
}

.contactus-box {
    margin-top: 50px;
    margin-bottom: 50px;
}

